# face-finding-dqn

./: Pipfile  README.md  dqn.py  face_env.py  main.py  main_test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
data/model/: download.csv
environment/: __init__.py  image_utils.py  model.py  people_framing_env.py
model/: __init__.py  dqn.py  dqn.py.885a62492f7c4bb7fd2db97b398cd5a0.tmp  logger.py
