[tool.poetry]
name = "face-finding-dqn"
version = "0.1.0"
description = ""
authors = ["Cleison Amorim <cca5@cin.ufpe.br>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.14.0"
gym = "^0.17.2"
tensorflow = "^2.3.0"
keras = "^2.4.3"
opencv-python = "^4.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
